--- a/.eslintrc
+++ b/.eslintrc
@@ -33,20 +33,16 @@
   ],
   "plugins": ["simple-import-sort", "prettier"],
   "rules": {
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-empty-function": "warn",
+    "@typescript-eslint/no-this-alias": "off",
+    "no-empty-function": "off",
     "prettier/prettier": ["error", {}, { "usePrettierrc": true }],
     "react/react-in-jsx-scope": "off",
     "jsx-a11y/accessible-emoji": "off",
     "react/prop-types": "off",
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error",
-    "jsx-a11y/anchor-is-valid": [
-      "error",
-      {
-        "components": ["Link"],
-        "specialLink": ["hrefLeft", "hrefRight"],
-        "aspects": ["invalidHref", "preferButton"]
-      }
-    ]
+    "simple-import-sort/imports": "warn",
+    "simple-import-sort/exports": "warn",
+    "jsx-a11y/anchor-is-valid": "warn"
   }
 }
