--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsc && vite build",
     "serve": "vite preview",
     "eslint": "eslint . --ext .js,.cjs,.ts,.jsx,.tsx, --quiet --fix --ignore-path ./.gitignore",
-    "prettier": "prettier . --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,html,md,json}\" ",
+    "prettier": "prettier . --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,html,json}\" ",
     "stylelint": "stylelint ./**/*.{css,less,scss,sass} --fix",
     "prepare": "git init && husky install",
     "type-check": "tsc"
