--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-reactts-eslint-prettier",
+  "name": "vite-react-app-template",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --open",
