--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "tsc && vite build",
     "serve": "vite preview",
     "eslint": "eslint . --ext .js,.cjs,.ts,.jsx,.tsx, --quiet --fix --ignore-path ./.gitignore",
-    "prettier": "prettier . --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,html,json}\" ",
-    "stylelint": "stylelint ./**/*.{css,less,scss,sass} --fix",
+    "prettier": "prettier . --loglevel warn --write 'src/**/*.{js,jsx,ts,tsx,css,html,json}'",
+    "stylelint": "stylelint src/**/*.{css,less,scss,sass} --fix",
     "prepare": "git init && husky install",
     "type-check": "tsc"
   },
